--- a/styles/common.css
+++ b/styles/common.css
@@ -1,7 +1,7 @@
 
 @font-face {
     font-family: NMCRedMono;
-    src: url('./fonts/Intro-Monov1.01GX.ttf')
+    src: url('https://github.com/vandenbogart/art.vandenbog.articles/raw/master/fonts/Intro-Monov1.01GX.ttf')
 }
 
 .article-header {
